Refactor code structure and remove redundant code blocks for improved readability and maintainability

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -4,16 +4,8 @@
     "slug": "mindspace",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.mindspace.app",
@@ -22,25 +14,17 @@
       }
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
       "package": "com.mindspace.app",
-      "permissions": [
-        "CAMERA"
-      ]
+      "permissions": ["CAMERA"],
+      "adaptiveIcon": {
+        "backgroundColor": "#ffffff"
+      }
+    },
+    "extra": {
+      "apiUrl": "https://cfb884d6ed8b.ngrok-free.app/api"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    },
-    "plugins": [
-      [
-        "expo-camera",
-        {
-          "cameraPermission": "Allow MindSpace to access your camera for QR code scanning."
-        }
-      ]
-    ]
+    }
   }
 }
