--- a/mobile/package.json
+++ b/mobile/package.json
@@ -4,37 +4,36 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.0",
-    "react": "18.2.0",
-    "react-native": "0.73.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-picker/picker": "2.6.1",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "@react-navigation/bottom-tabs": "^6.5.11",
     "@reduxjs/toolkit": "^2.0.1",
-    "react-redux": "^9.0.4",
     "axios": "^1.6.2",
-    "react-native-qrcode-svg": "^6.2.0",
-    "expo-camera": "~14.0.0",
-    "expo-barcode-scanner": "~12.8.0",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "react-native-paper": "^5.11.3",
-    "react-native-vector-icons": "^10.0.3",
+    "date-fns": "^3.0.6",
+    "expo": "~50.0.0",
+    "expo-notifications": "~0.27.6",
+    "expo-secure-store": "~12.8.1",
+    "expo-status-bar": "~1.11.1",
+    "react": "18.2.0",
+    "react-native": "0.73.6",
     "react-native-calendars": "^1.1302.0",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-svg": "14.1.0",
-    "date-fns": "^3.0.6",
-    "expo-secure-store": "~12.8.1",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-paper": "^5.11.3",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "~3.6.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "@react-native-picker/picker": "2.6.1",
-    "expo-notifications": "~0.27.6"
+    "react-native-svg": "14.1.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-redux": "^9.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.23.5"
